--- a/package.json
+++ b/package.json
@@ -1,23 +1,19 @@
 {
   "name": "menu-app",
   "version": "0.1.0",
-  "homepage": "https://rheajshah.github.io/cs378-p3",
   "private": true,
+  "homepage": "https://rheajshah.github.io/cs378-p3",
   "dependencies": {
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
-    "boostrap": "^2.0.0",
     "bootstrap": "^5.3.2",
     "react": "^18.2.0",
-    "react-bootstrap": "^2.10.1",
     "react-dom": "^18.2.0",
-    "react-scripts": "^5.0.1",
+    "react-scripts": "5.0.1",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
-    "predeploy": "npm run build",
-    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
@@ -40,8 +36,5 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  },
-  "devDependencies": {
-    "gh-pages": "^6.1.1"
   }
 }
