--- a/package.json
+++ b/package.json
@@ -2,14 +2,15 @@
   "name": "menu-app",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://rheajshah.github.io/cs378-p3",
+  "homepage": "https://rheajshah.github.io/cs378-p4",
   "dependencies": {
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
-    "bootstrap": "^5.3.2",
+    "bootstrap": "^5.3.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-router-dom": "^6.22.3",
     "react-scripts": "5.0.1",
     "web-vitals": "^2.1.4"
   },
