--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "menu-app",
+  "name": "weather-app",
   "version": "0.1.0",
   "private": true,
   "homepage": "https://rheajshah.github.io/cs378-p4",
